...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_portrait_onboarding_3" />

      <TextView
        android:id="@+id/slide_title_text_view"
        style="@style/Heading1"
        android:layout_width="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="16dp"
...
        android:textColor="@color/component_color_shared_primary_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slide_image_view" />

      <TextView
        android:id="@+id/slide_description_text_view"
        style="@style/Subtitle1ViewCenterHorizontal"
        android:layout_width="0dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="68dp"
        android:maxLines="2"
...
        android:textColor="@color/component_color_shared_secondary_1_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slide_title_text_view" />

      <Button
        android:id="@+id/get_started_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="32dp"
...
